--- a/forms.css
+++ b/forms.css
@@ -1,6 +1,3 @@
-body {
-    
-}
 #container{
     position: absolute;
     top: 5%;
@@ -20,10 +17,9 @@ form {
     width: 90%;
     height: 90%;
     margin: auto;
-      
 }
 input[type=submit]{
-    Background-color: #95e1d3;
+    Background-color: cornflowerblue;
     font-size: 15px;
     border: none;
     padding: 10px 60px;
